[package]
name = "ewe_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["config-loader", "config", "ewe_config"]

[dependencies]
toml = {  workspace = true }
derive_more = { workspace = true }

# -- serde
serde = { version = "1.0.197", features = ["derive"] }
serde_with = { version = "3.6.1" }

[lints]
workspace = true
