[package]
name = "ewe-devserver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
# workspace packages
ewe-logs = { workspace = true, features = ["standard"]}
tracing.workspace = true
anyhow.workspace = true
derive_more.workspace = true

# -- axum and tower
axum = { version = "0.7.5" }
crossbeam = { version = "0.8" }
futures = { version = "0.3" }
tokio = { version = "1.36", default-features = true, features=["io-util", "rt"] }
bytes = { version = "1.6.1" }
http = { version = "1.1.0" }
tower = { version = "0.4.13" }

# -- serve# -- serve
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_with = { version = "3.6.1" }

[features]

[lints]
workspace = true
