[package]
name = "ewe_domain"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# crate besed dependencies
ewe_channels.workspace = true

# other dependencies
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

tokio = { version = "1.36", features = ["full"] }
async-channel = { version = "2.2" }
futures = { version = "0.3" }
crossbeam = { version = "0.8" }
anyhow = { version = "1.0.80" }
thiserror = { version = "1.0.57" }

[dev-dependencies]
tracing-test = { version = "0.2.5" }
tokio-test = { version = "0.4" }

[lints]
workspace = true
